WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301045
OOP iframes don't load when main resource has restrictive COOP policy
https://bugs.webkit.org/show_bug.cgi?id=301045
Summary
OOP iframes don't load when main resource has restrictive COOP policy
Ben Nham
Reported
2025-10-18 13:59:28 PDT
See PR
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-18 13:59:34 PDT
<
rdar://problem/162943276
>
Ben Nham
Comment 2
2025-10-18 14:03:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52616
EWS
Comment 3
2025-10-19 10:50:09 PDT
Committed
301785@main
(86c0467f20ee): <
https://commits.webkit.org/301785@main
> Reviewed commits have been landed. Closing PR #52616 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug